# personalcloud

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/routes/: files.py  search.py  status.py
api/services/: embeddings.py  ocr.py  storage.py  watcher.py
cli/: main.py
config/: settings.py
db/: database.py  migrate_add_chunks.sql  models.py
menubar/: Info.plist
menubar/Sources/: APIClient.swift  App.swift  MenuBarView.swift  Models.swift  PreviewView.swift  SearchView.swift  SearchWindow.swift  SettingsView.swift
menubar/personalcloud.xcodeproj/: project.pbxproj
menubar/personalcloud.xcodeproj/project.xcworkspace/xcuserdata/aidenkim.xcuserdatad/: UserInterfaceState.xcuserstate
menubar/personalcloud.xcodeproj/xcuserdata/aidenkim.xcuserdatad/xcschemes/: xcschememanagement.plist
